messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging
      version: blue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1 # ensures at least 2 pods stay up
      maxSurge: 1 # allows 1 extra pod during update
  template:
    metadata:
      labels:
        app: messaging
        version: blue
    spec:
      containers:
        - name: django-messaging
          image: kevin/messaging-app:v2.0 # Updated image version
          ports:
            - containerPort: 8000
